--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             <h3 class="my-4"><b>E se você soubesse apenas 6 passos para conquistar seu ex de volta?</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+             <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/81db61c3-5fb5-4dab-bb13-1e366ad766fc/players/628e986de3ab88000b7efd1c/embed.html" id="ifr_628e986de3ab88000b7efd1c" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/ORaYr76" class="a-btn" style="text-decoration: none;">
