--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <!-- Headline -->
             <h3 class="my-4"><b>E se você soubesse apenas 6 passos para conquistar seu ex de volta?</b></h3>
+            647 pessoas estão assistindo agora, então o vídeo pode demorar até 5 segundos para carregar</a>
+
 
             <!-- VSL -->
              <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/81db61c3-5fb5-4dab-bb13-1e366ad766fc/players/628e986de3ab88000b7efd1c/embed.html" id="ifr_628e986de3ab88000b7efd1c" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
